# magicc

./: .gitattributes  .gitignore  85_bcg.hmm  LICENSE  MANIFEST.in  README.md  pyproject.toml  uacg.hmm
data/features/: normalization_params.json
data/kmer_selection/: archaeal_kmer_prevalence.tsv  archaeal_kmer_stats.json  bacterial_kmer_prevalence.tsv  bacterial_kmer_stats.json  kmer_selection_stats.json  selected_archaeal_1000.tsv  selected_bacterial_1000.tsv  selected_kmers_annotated.tsv
magicc/: __init__.py  __main__.py  assembly_stats.py  cli.py  contamination.py  fragmentation.py  kmer_counter.py  model.py  normalization.py  pipeline.py  storage.py  trainer.py
magicc/data/: normalization_params.json  selected_kmers.txt
manuscript/: build_manuscript.js  build_supplementary.js  manuscript.docx  manuscript.md  package-lock.json  supplementary.docx  supplementary.md
manuscript/scripts/: create_docx.js  create_figures.py  create_manuscript.js  create_supplementary.js  figure2_method.txt  make_figure2_improved.py
models/: magicc_v3.onnx  magicc_v4.onnx  magicc_v5.onnx  training_history.json
results/: accuracy_metrics.tsv  accuracy_metrics_v2.tsv  benchmark_v4_comparison.tsv  benchmark_v4_results.tsv  benchmark_v4_summary.json  mimag_classification.tsv  motivating_summary.tsv  motivating_summary_v2.tsv  statistical_tests.tsv  tool_comparison_summary.tsv  tool_comparison_summary_v2.tsv
scripts/: 19_batch_synthesis_v2.py  20_train_model.py  22_export_onnx.py  45_pathogen_checkm2_comparison.py  45_pathogen_genome_analysis.py  46_alignment_validation.py  46_kraken2_case_study.py  46_pathogen_gtdb_comparison.py  47_pathogen_analysis_v2.py
(+48 files in other folders)
